--- a/index.html
+++ b/index.html
@@ -723,126 +723,112 @@
                                     <div class="row">
                                         <div id="el-401" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3Sob4Z6l" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Web Design</h5>
+                                                            <h5 class="mb-2">The Power of Your Subconscious Mind</h5>
 
-                                                            <p class="mb-0">Topic Listing Template based on Bootstrap 5</p>
+                                                            <p class="mb-0">The Power of Your Subconscious Mind: Original Edition by Joseph Murphy| Premium Paperback</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">401</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-402" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/48EdDvY" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Indian Polity for UPSC</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Indian Polity for UPSC (English) by M. Laxmikanth|7th Edition|Civil Services Exam| State Administrative Exams Paperback – 15 July 2023</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">402</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-403" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://www.amazon.in/Atomic-Habits-James-Clear/dp/1847941834?psc=1&linkCode=sl1&tag=jaisomani-21&linkId=4526c4c9255445e4e59c2c14314980e2&language=en_IN&ref_=as_li_ss_tl" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Atomic Habits</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Atomic Habits by James Clear | Paperback – 1 January 2018</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">403</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-404" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/4909RNi" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">The Psychology Of Money</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">The Psychology Of Money by Morgan Housel | Paperback – 1 September 2020</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">404</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-405" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/48Hr1Q6" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Ikigai</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Ikigai by Hector Garcia & Fracesc Miralles | Hardcover – 27 September 2017</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">405</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-406" class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3U6wZ8p" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Graphic</h5>
+                                                            <h5 class="mb-2">Do It Today</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">Do It Today: Overcome procrastination, improve productivity and achieve more meaningful things, by Darius Foroux,  Paperback – 27 October 2020</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">406</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
 
                                         <div id="el-407" class="col-lg-4 col-md-6 col-12">
                                             <div class="custom-block bg-white shadow-lg">
-                                                <a href="topics-detail.html" target=”_blank”>
+                                                <a href="https://amzn.to/3HmZuXY" target=”_blank”>
                                                     <div class="d-flex">
                                                         <div>
-                                                            <h5 class="mb-2">Logo Design</h5>
+                                                            <h5 class="mb-2">The Art of Laziness</h5>
 
-                                                                <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+                                                                <p class="mb-0">The Art of Laziness: Overcome Procrastination & Improve Your Productivity, by Liberary Mindset| Paperback – 11 December 2023</p>
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">407</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/colleagues-working-cozy-office-medium-shot.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -882,8 +868,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">501</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Remote_design_team_re_urdx.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -900,8 +884,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">502</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -918,8 +900,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">503</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -936,8 +916,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">504</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -954,8 +932,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">505</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -972,8 +948,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">506</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/undraw_Redesign_feedback_re_jvm0.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
@@ -990,8 +964,6 @@
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">507</span>
                                                     </div>
-
-                                                    <!-- <img src="images/topics/colleagues-working-cozy-office-medium-shot.png" class="custom-block-image img-fluid" alt=""> -->
                                                 </a>
                                             </div>
                                         </div>
