--- a/index.html
+++ b/index.html
@@ -562,6 +562,81 @@
                                                 </a>
                                             </div>
                                         </div>
+                                        <div id="el-208" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3tQTWSB" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Samsung Galaxy Tab A9+</h5>
+
+                                                                <p class="mb-0">Samsung Galaxy Tab A9+ 27.94 cm (11.0 inch) Display, RAM 8 GB, ROM 128 GB Expandable, Wi-Fi Tablet, Graphite</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">208</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-209" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/4b3JdEP" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Western Digital WD Blue SN580 NVMe 1TB SSD</h5>
+
+                                                                <p class="mb-0">Western Digital WD Blue SN580 NVMe 1TB, Upto 4150MB/s, 5 Y Warranty, PCIe Gen 4 NVMe M.2 (2280), Internal Solid State Drive (SSD)</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">209</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-210" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/48E6yeZ" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">ZEBRONICS Sniper High Precision Gaming Mouse</h5>
+
+                                                                <p class="mb-0">ZEBRONICS Newly Launched Sniper High Precision Wired Gaming Mouse with 6 Buttons, Multicolor LED Lights, DPI Switch with 800/1200/1600/2400 DPI’s, Plug & Play, 1 Million Clicks, 87 Grams Light Mouse</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">210</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-211" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/47JrSOS" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">SanDisk USB Type C Pendrive</h5>
+
+                                                                <p class="mb-0">SanDisk Ultra Dual Drive Go USB Type C Pendrive for Mobile Available in 5 Variants and 6 different colors.</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">211</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-212" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3HqIXSV" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Ambrane Braided Type C to Type C Cable</h5>
+
+                                                                <p class="mb-0">Ambrane Unbreakable 60W / 3A Fast Charging 1.5m Braided Type C to Type C Cable - 480Mbps Data Sync</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">212</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -963,6 +1038,126 @@
                                                         </div>
 
                                                         <span class="badge bg-blue rounded-pill ms-auto">507</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-508" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/4911dhr" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Astronaut Planet Coffee Mug</h5>
+
+                                                                <p class="mb-0">Astronaut Planet Coffee Mug, Coffee Mug with Lid, Birthday Gift, Space Mug, 3D Creative - 400ml</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">508</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-509" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3S8mpew" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Luxury Travel Neck Rest Pillow</h5>
+
+                                                                <p class="mb-0">GREELI Premium Memory Foam Luxury Travel Neck Rest Pillow with Super Soft Removable Cover, Multipurpose Comfortable Travel Pillow for Men and Women</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">509</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-510" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3HqX9v9" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Passport Holder Cover Travel Wallet Organiser</h5>
+
+                                                                <p class="mb-0">Rylan Passport Holder Cover Travel Wallet Organiser, Passport Case with RFID Blocking, PU Leather Travel Document Holder for Men & Women Travel Accessories</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">510</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-511" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/423d7oT" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Airplane Travel Pillow</h5>
+
+                                                                <p class="mb-0">GREELI Neck Pillow for Travelling Luxurious Airplane Travel Pillow Head Rest Neck Holder Pillow Combo with Premium Eye Mask and Earphone Case & 5 Years Warranty</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">511</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-512" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3SoAllX" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Travel Soap Case</h5>
+
+                                                                <p class="mb-0">Upgraded Leakproof Travel Soap Case, Shampoo Bar Holder, Red Dot Design Recipient</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">512</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-513" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3HsmiFI" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Metal Desk Organizer</h5>
+
+                                                                <p class="mb-0">GLUN® Metal Desk Organizer with 4 Different Compartment, Metal Mesh Desk Organizer Stationary Storage Stand Pen</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">513</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-514" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/48WZwBF" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Electric Hot Water Bag</h5>
+
+                                                                <p class="mb-0">Caresmith Eon Premium Electric Hot Water Bag | Dual Insulation Silicon Technology | 6 Layers of Protection</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">514</span>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div id="el-515" class="col-lg-4 col-md-6 col-12">
+                                            <div class="custom-block bg-white shadow-lg">
+                                                <a href="https://amzn.to/3UeAHNg" target=”_blank”>
+                                                    <div class="d-flex">
+                                                        <div>
+                                                            <h5 class="mb-2">Paperkraft Vintage Series</h5>
+
+                                                                <p class="mb-0">Paperkraft Vintage Series - Color Kraft With Vintage Items Theme : 210 Mm X 148 Mm,176 Pages, Unruled, Sewn & Perfect Bound, Pack Of 3</p>
+                                                        </div>
+
+                                                        <span class="badge bg-blue rounded-pill ms-auto">515</span>
                                                     </div>
                                                 </a>
                                             </div>
